compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/JvmPackageName.java
@kotlin.jvm.JvmPackageName(name = "a.b.c")
public final class JvmPackageNameKt /* a.b.c.JvmPackageNameKt*/ {
  public static final void f();//  f()

}